# webrana-cli

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.musl  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
agents/: nexus.txt
config/: default.toml
docs/: API_GATEWAY_SPEC.md  PLUGIN_DEVELOPMENT.md  SECURITY_AUDIT.md
editors/nvim-webrana/: README.md
editors/nvim-webrana/lua/webrana/: init.lua
editors/vscode-webrana/: README.md  package.json
editors/vscode-webrana/src/: extension.ts
examples/plugins/git-stats/: plugin.yaml
examples/plugins/hello-plugin/: Cargo.toml  README.md  plugin.yaml
examples/plugins/hello-plugin/src/: lib.rs
homebrew/: webrana.rb
plugins/calculator/: manifest.yaml  plugin.wat
plugins/hello-world/: manifest.yaml  plugin.wat
plugins/text-utils/: manifest.yaml  plugin.wat
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs  settings.rs
src/core/: agent.rs  audit.rs  metrics.rs  mod.rs  orchestrator.rs  rate_limit.rs  safety.rs  secrets.rs  updater.rs
src/crew/: manager.rs  mod.rs  persona.rs
src/embeddings/: mod.rs  provider.rs  qdrant.rs  store.rs
src/indexer/: detector.rs  index.rs  mod.rs  walker.rs
src/llm/: cache.rs  client.rs  mod.rs  providers.rs  rag.rs  retry.rs  webrana.rs
src/mcp/: client.rs  mod.rs  protocol.rs  registry.rs  server.rs
src/memory/: mod.rs
src/plugins/: loader.rs  manager.rs  manifest.rs  mod.rs  runtime.rs
src/skills/: codebase.rs  edit_file.rs  file_ops.rs  git_ops.rs  mod.rs  registry.rs  semantic_search.rs  shell.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/ui/: console.rs
tests/: cli_test.rs  config_test.rs  llm_test.rs  memory_test.rs  plugin_test.rs  security_test.rs  skills_test.rs
